Fixed issue that disaligned table border; fixed issue of switching versions overwriting print rule

--- a/HW3/ManageIssuesStyle.css
+++ b/HW3/ManageIssuesStyle.css
@@ -94,7 +94,7 @@ body {
     border-radius: 10px 10px 0px 0px;
     text-align: center;
     font-size: 14px;
-    height: 35px;
+    height: 29px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 5px;
